syntax = "proto3";

option csharp_namespace = "GameClient";

package game;

service AmazingGame {
  rpc BuyItem (stream BuyItemRequest) returns (stream BuyItemResponse);
  rpc SellItem (stream SellItemRequest) returns (stream SellItemResponse);
  rpc GetCoins (stream GetCoinsRequest) returns (stream GetCoinsResponse);
  rpc GetShopItems (stream Empty) returns (stream GetShopItemsResponse);
  rpc GetProfileItems (stream GetProfileItemsRequest) returns (stream GetProfileItemsResponse);
}

message Item {
  int32 id = 1;
  string name = 2;
  int32 price = 3;
}

message Profile {
  int32 id = 1;
  string nickname = 2;
  int32 coins = 3;
  repeated Item items = 4;
}

message BuyItemRequest {
  int32 itemId = 1;
  string nickname = 2;
}
 
message BuyItemResponse {
  Profile profile = 1;
  bool isSuccess = 2;
}

message SellItemRequest {
  int32 itemId = 1;
  string nickname = 2;
}
 
message SellItemResponse {
  Profile profile = 1;
  bool isSuccess = 2;
}

message GetCoinsRequest {
  string nickname = 1;
}

message GetCoinsResponse {
  int32 coins = 1;
}

message GetShopItemsResponse {
	repeated Item items = 1;
}

message Empty {}

message GetProfileItemsRequest {
	string nickname = 1;
}

message GetProfileItemsResponse {
	repeated Item items = 1;
}

